sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:7: error: '(' expected but identifier found.
      if a > getValeur(j){
         ^AlgSelectionSort:11: error: illegal start of simple expression
    }
    ^