sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  for (i <- 0 to getNombreValeurs()-2){
    var a = getValeur(i+1)
    var b = i + 1
    for (j <- i to getNombreValeurs()-1){
			if a > getValeur(j){
        a = getValeur(j)
        b = j
      }
    }
    echange(i,b)
  }
}